<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_vertical|start">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/title"
        android:layout_marginBottom="20dp"
        android:gravity="top|center_vertical"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/button_login"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@color/black"
        android:layout_marginBottom="20dp"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_guest"
        android:text="@string/continue_as_guest"
        android:layout_marginBottom="20dp"/>
    
    
</androidx.appcompat.widget.LinearLayoutCompat>