<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tb_fav"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/title_favorite"
        app:navigationIcon="@drawable/ic_back"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_error_loading"
        app:layout_constraintTop_toBottomOf="@id/tv_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fav_error_loading"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_found"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_gravity="center|center_vertical"
        android:text="@string/found_text"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tb_fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swipe_fav"
        app:layout_constraintTop_toBottomOf="@id/tv_title_error_loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_fav"
            tools:listitem="@layout/rv_photolist_item"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fav_progress"
        app:layout_constraintTop_toBottomOf="@id/tb_fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>